--- a/app/views/layouts/rails_admin/_models_tabs.html.haml
+++ b/app/views/layouts/rails_admin/_models_tabs.html.haml
@@ -1,25 +1,24 @@
-- can_list = authorized? :list, @abstract_model
+- can_list = authorized? :index, @abstract_model
 - can_delete = authorized? :delete, @abstract_model
 - can_export = authorized? :export, @abstract_model
-- can_list = authorized? :list, @abstract_model
 - can_create = authorized? :new, @abstract_model
 - can_see_history = authorized? :see_history, @abstract_model
 
-%li{:class => (params[:action] == 'list' && 'active')}= link_to @model_config.label_plural, list_path(:model_name => params[:model_name]) if can_list
-%li{:class => (params[:action] == 'new' && 'active')}= link_to t("admin.list.add_new"), new_path(:model_name => params[:model_name]) if can_create
+%li{:class => (params[:action] == 'index' && 'active')}= link_to @model_config.label_plural, index_path(:model_name => params[:model_name]) if can_list
+%li{:class => (params[:action] == 'new' && 'active')}= link_to t("admin.index.add_new"), new_path(:model_name => params[:model_name]) if can_create
 %li{:class => (params[:action] == 'for_model' && 'active')}= link_to t("admin.history.name"), history_model_path(:model_name => params[:model_name]) if can_see_history
 %li{:class => (params[:action] == 'export' && 'active')}= link_to t("admin.breadcrumbs.export").capitalize, export_path(params[:model_name]) if can_export
 
-- if params[:action] == 'list' 
+- if params[:action] == 'index' 
   - if (can_delete || can_export)
     %li.dropdown{:style => 'float:right', :'data-dropdown' => "dropdown"}
-      %a.dropdown-toggle= t('admin.list.selected') + "..."
+      %a.dropdown-toggle= t('admin.index.selected') + "..."
       %ul.dropdown-menu
-        %li= link_to_function t("admin.list.export_selected"), "jQuery('#bulk_action').val('export'); jQuery('#bulk_form').submit()" if can_export
-        %li= link_to_function t("admin.list.delete_selected"), "jQuery('#bulk_action').val('delete'); jQuery('#bulk_form').submit()" if can_delete
+        %li= link_to_function t("admin.index.export_selected"), "jQuery('#bulk_action').val('export'); jQuery('#bulk_form').submit()" if can_export
+        %li= link_to_function t("admin.index.delete_selected"), "jQuery('#bulk_action').val('delete'); jQuery('#bulk_form').submit()" if can_delete
   - if @filterable_fields.present?
     %li.dropdown{:style => 'float:right', :'data-dropdown' => "dropdown"}
-      %a.dropdown-toggle= t('admin.list.add_filter') + "..."
+      %a.dropdown-toggle= t('admin.index.add_filter') + "..."
       %ul.dropdown-menu#filters
         - @filterable_fields.each do |field|
           - field_options = case field.type
