--- a/app/views/layouts/rails_admin/_navigation.html.haml
+++ b/app/views/layouts/rails_admin/_navigation.html.haml
@@ -1,4 +1,4 @@
-- models = RailsAdmin::Config.visible_models.select { |model| authorized?(:list, model.abstract_model) }
+- models = RailsAdmin::Config.visible_models.select { |model| authorized?(:index, model.abstract_model) }
 - root_models = models.select { |model| model.parent == :root }
 
 %ul#nav.navigation
@@ -10,10 +10,10 @@
     - active = tab_titles.include? @page_type
     %li{:class => "#{"active" if active} #{"more" unless children.empty?}"}
       - if children.size == 1
-        = link_to(model.label_plural, list_path(:model_name => model.abstract_model.to_param))
+        = link_to(model.label_plural, index_path(:model_name => model.abstract_model.to_param))
       - else
         = model.navigation_label ? t(model.navigation_label, :default => model.navigation_label) : model.label_plural
         %ul
           - children.each_with_index do |child, index|
             %li{:class => ("active" if @page_type == tab_titles[index])}
-              = link_to(child.label_plural, list_path(:model_name => child.abstract_model.to_param))
+              = link_to(child.label_plural, index_path(:model_name => child.abstract_model.to_param))
