--- a/app/views/rails_admin/main/_form_filtering_select.html.haml
+++ b/app/views/rails_admin/main/_form_filtering_select.html.haml
@@ -32,7 +32,7 @@
     createQuery: function(query) {
     return { query: query }
     },
-    source: "#{list_path(config.abstract_model.to_param, :compact => true).html_safe}"
+    source: "#{index_path(config.abstract_model.to_param, :compact => true).html_safe}"
   });
   if($(".createAssociatedRecordDialog").length == 0) {
   $("##{field.dom_id}_field .createAssociatedRecord").remoteForm({ dialogClass: "createAssociatedRecordDialog" });
