removed 111kB of compressed JS from rails_admin.js switched to TB modals instead of JQueryUI dialogs refactored JS for theming

--- a/app/assets/stylesheets/rails_admin/base/theming.css.scss
+++ b/app/assets/stylesheets/rails_admin/base/theming.css.scss
@@ -31,6 +31,16 @@ input, textarea {
   display:inline-block;
 }
 
+/* Modals dimensionning */
+.modal {
+  width:700px;
+  margin:-285px 0 0 -350px;
+  .modal-body {
+    max-height:450px;
+    overflow-y:auto;
+  }
+}
+
 /* Table cells behaviour TODO: homogeinize classes a bit */
 table.zebra-striped {
   /* All */
