--- a/app/assets/stylesheets/rails_admin/imports.css.scss.erb
+++ b/app/assets/stylesheets/rails_admin/imports.css.scss.erb
@@ -1,3 +1,7 @@
+<%
+  theme = :default
+%>
+
 /* 
 TODO : 
   - optionize the theme variable nicely
@@ -7,7 +11,6 @@ TODO :
   - ask @sferik to RT a call for themers
 */
 
-<% theme = :default %>
 
 /***  Variables  ***/
 
@@ -23,6 +26,9 @@ TODO :
 @import "rails_admin/themes/<%= theme %>/mixins";
 @import "rails_admin/custom/mixins";
 
+/*** Reset ***/
+@import "bootstrap/reset";
+
 /***  Libraries  ***/
 
 @import "rails_admin/aristo/jquery-ui-1.8.7.custom";
@@ -32,16 +38,15 @@ TODO :
 @import "rails_admin/ra.filtering-multiselect";
 @import "rails_admin/ra.timeline";
 
-/***  Bootstrap!  ***/
+/***  Bootstrap Theming  ***/
 
-@import "bootstrap/reset";
 @import "bootstrap/scaffolding";
 @import "bootstrap/type";
 @import "bootstrap/forms";
 @import "bootstrap/tables";
 @import "bootstrap/patterns";
 
-/***  Theming  ***/
+/***  RailsAdmin Theming  ***/
 
 @import "rails_admin/base/theming";
 @import "rails_admin/themes/<%= theme %>/theming";
