--- a/app/views/layouts/rails_admin/_secondary_navigation.html.haml
+++ b/app/views/layouts/rails_admin/_secondary_navigation.html.haml
@@ -4,6 +4,11 @@
 - if _current_user
   - if authorized?(:edit, _current_user.class, _current_user) && _current_user.respond_to?(:email)
     %li= link_to _current_user.email, edit_path(_current_user.class.name.underscore.pluralize, _current_user)
-  - if defined?(Devise) && (devise_scope = request.env["warden"].config[:default_scope] rescue false) && (logout_path = main_app.send("destroy_#{devise_scope}_session_path") rescue false)
-    %li= link_to content_tag('span', t('admin.credentials.log_out'), :class => 'label important'), logout_path, :method => Devise.sign_out_via
-  %li= image_tag "#{(request.ssl? ? 'https://secure' : 'http://www')}.gravatar.com/avatar/#{Digest::MD5.hexdigest _current_user.email}?s=30", :style => 'padding-top:5px'
+  - if defined?(Devise)
+    %li
+      - if RailsAdmin.config.destroy_user_path
+        = link_to content_tag('span', t('admin.credentials.log_out'), :class => 'label important'), main_app.send(RailsAdmin.config.destroy_user_path), :method => Devise.sign_out_via
+      - else
+        = link_to content_tag('span', t('admin.credentials.log_out'), :class => 'label important'), main_app.url_for(:action => 'destroy', :controller => 'devise/sessions'), :method => Devise.sign_out_via
+    
+    %li= image_tag "#{(request.ssl? ? "https://secure" : "http://www") + ".gravatar.com/avatar"}/#{Digest::MD5.hexdigest _current_user.email}?s=30", :style => 'padding-top:5px'
