main_app_name: added tests, doc and initializer correction. fixes #790

--- a/app/assets/stylesheets/rails_admin/base/theming.css.scss
+++ b/app/assets/stylesheets/rails_admin/base/theming.css.scss
@@ -3,6 +3,15 @@
   Keep it clean, people
 */
 
+/* Application name */
+.topbar h3 {
+  font-weight:bold;
+  small {
+    color:red;
+    
+  }
+}
+
 /* We want input size to be used, unfixate input width */
 input, textarea {
   width:auto;
