--- a/app/views/layouts/rails_admin/application.html.haml
+++ b/app/views/layouts/rails_admin/application.html.haml
@@ -14,8 +14,8 @@
           .container-fluid
             %h3
               = link_to dashboard_path do
-                %span.first= (@plugin_name_array[0] || 'Rails')
-                %span.second= (@plugin_name_array[1] || 'Admin')
+                = _get_plugin_name[0] || 'Rails'
+                %small= _get_plugin_name[1] || 'Admin'
             %ul.nav.secondary-nav= render :partial => 'layouts/rails_admin/secondary_navigation'
     .container-fluid
       .sidebar
