--- a/app/views/rails_admin/main/index.html.haml
+++ b/app/views/rails_admin/main/index.html.haml
@@ -40,6 +40,7 @@
 - show_label    = t("admin.index.show_action")
 - delete_label  = t("admin.index.delete_action")
 - edit_label    = t("admin.index.edit_action")
+- history_label    = t("admin.breadcrumbs.for_object")
 
 #list
   %style
@@ -87,9 +88,7 @@
             - other_right = index_path(params.merge(:set => (params[:set].to_i + 1)))
             %td.other.right{ :style => "#{'display: none' if @other.include?("right")}" }= link_to "...", other_right, :remote => true
             %td.last
-              = link_to show_label, show_path(:model_name => params[:model_name], :id => object.id), :class => 'show_link' if authorized? :show, @abstract_model, object
-              = link_to edit_label, edit_path(:model_name => params[:model_name], :id => object.id), :class => 'edit_link' if authorized? :edit, @abstract_model, object
-              = link_to delete_label, delete_path(:model_name => params[:model_name], :id => object.id), :class => 'delete_link' if authorized? :delete, @abstract_model, object
+              %ul.object_links= render :partial => 'rails_admin/main/object_links', :locals => { :add_active_class => false, :model_name => params[:model_name], :object => object }
     - unless params[:all]
       - total_count = @objects.total_count
       = paginate(@objects, :theme => 'twitter-bootstrap', :remote => true)
