fix right links css [ci skip]

--- a/app/assets/stylesheets/rails_admin/base/theming.css.scss
+++ b/app/assets/stylesheets/rails_admin/base/theming.css.scss
@@ -66,10 +66,11 @@ table.zebra-striped {
     width:13px;
   }
   th.first {
-    width:18px;
+    width:13px;
   }
   th.last {
-    width:65px;
+    width:160px;
+    min-width:160px;
   }
   td.last {
     .object_links {
