--- a/app/views/rails_admin/main/_models_links.html.haml
+++ b/app/views/rails_admin/main/_models_links.html.haml
@@ -1,13 +1,14 @@
-- can_list = authorized? :index, @abstract_model
-- can_delete = authorized? :delete, @abstract_model
-- can_export = authorized? :export, @abstract_model
-- can_create = authorized? :new, @abstract_model
-- can_see_history = authorized? :history, @abstract_model
-
-%li{:class => (params[:action] == 'index' && 'active')}= link_to @model_config.label_plural, index_path(:model_name => params[:model_name]) if can_list
-%li{:class => (params[:action] == 'new' && 'active')}= link_to t("admin.index.add_new"), new_path(:model_name => params[:model_name]) if can_create
-%li{:class => (params[:action] == 'for_model' && 'active')}= link_to t("admin.history.name"), history_model_path(:model_name => params[:model_name]) if can_see_history
-%li{:class => (params[:action] == 'export' && 'active')}= link_to t("admin.breadcrumbs.export").capitalize, export_path(params[:model_name]) if can_export
+- model_name = abstract_model.to_param
+- can_list = authorized? :index, abstract_model
+- can_delete = authorized? :delete, abstract_model
+- can_export = authorized? :export, abstract_model
+- can_create = authorized? :new, abstract_model
+- can_see_history = authorized? :history, abstract_model
+- if @model_config
+  %li{:class => (params[:action] == 'index' && 'active')}= link_to @model_config.label_plural, index_path(:model_name => model_name) if can_list
+%li{:class => (params[:action] == 'new' && 'active')}= link_to t("admin.index.add_new"), new_path(:model_name => model_name) if can_create
+%li{:class => (params[:action] == 'for_model' && 'active')}= link_to t("admin.history.name"), history_model_path(:model_name => model_name) if can_see_history
+%li{:class => (params[:action] == 'export' && 'active')}= link_to t("admin.breadcrumbs.export").capitalize, export_path(model_name) if can_export
 
 - if params[:action] == 'index'
   - if (can_delete || can_export)
@@ -23,7 +24,7 @@
         - @filterable_fields.each do |field|
           - field_options = case field.type
           - when :enum
-            - h options_for_select(field.with(:object => @abstract_model.model.new).enum).gsub("\n", '')
+            - h options_for_select(field.with(:object => abstract_model.model.new).enum).gsub("\n", '')
           - else
             - ''
           %li
