--- a/app/views/rails_admin/main/dashboard.html.haml
+++ b/app/views/rails_admin/main/dashboard.html.haml
@@ -1,10 +1,10 @@
 %table.zebra-striped
   %thead
     %tr
-      %th.model-name= t "admin.dashboard.model_name"
-      %th.last-used= t "admin.dashboard.last_used"
+      %th.shrink.model-name= t "admin.dashboard.model_name"
+      %th.shrink.last-used= t "admin.dashboard.last_used"
       %th.records= t "admin.dashboard.records"
-      %th.controls
+      %th.shrink.controls
   %tbody
     - @abstract_models.each do |abstract_model|
       - if authorized? :index, abstract_model
@@ -13,7 +13,7 @@
 
         %tr{:class => row_class, :"data-link" => index_path}
           %td
-            %span.show= link_to RailsAdmin.config(abstract_model).label, index_path
+            %span.show= link_to RailsAdmin.config(abstract_model).label_plural, index_path
           %td
             - if (last_used = @most_recent_changes[abstract_model.pretty_name])
               = time_ago_in_words last_used
@@ -23,11 +23,7 @@
             - percent = count > 0 ? (@max < 2.0 ? count : ((Math.log(count) * 100.0) / Math.log(@max))) : -1
             .label.animate-width-to{:class => get_indicator(percent), :'data-animate-length' => ([1.0, percent].max.to_i * 20), :'data-animate-width-to' => "#{[2.0, percent].max.to_i}%", :style => "width:2%"}= @count[abstract_model.pretty_name]
           %td
-            - if authorized? :new, abstract_model
-              = link_to t("admin.dashboard.add_new"), new_path(:model_name => abstract_model.to_param)
-            - if authorized? :history, abstract_model
-              - history_path = history_model_path(:model_name => abstract_model.to_param)
-              = link_to t("admin.history.name"), history_path
+            %ul.object_links.inline= render :partial => 'rails_admin/main/models_links', :locals => { :abstract_model => abstract_model }
 - if authorized? :history
   #block-tables.block
     .content
