--- a/app/views/rails_admin/main/dashboard.html.haml
+++ b/app/views/rails_admin/main/dashboard.html.haml
@@ -22,8 +22,8 @@
             - count = @count[abstract_model.pretty_name]
             - percent = count > 0 ? (@max < 2.0 ? count : ((Math.log(count) * 100.0) / Math.log(@max))) : -1
             .label.animate-width-to{:class => get_indicator(percent), :'data-animate-length' => ([1.0, percent].max.to_i * 20), :'data-animate-width-to' => "#{[2.0, percent].max.to_i}%", :style => "width:2%"}= @count[abstract_model.pretty_name]
-          %td
-            %ul.object_links.inline= render :partial => 'rails_admin/main/models_links', :locals => { :abstract_model => abstract_model }
+          %td.links
+            %ul.inline= render :partial => 'rails_admin/main/models_links', :locals => { :abstract_model => abstract_model }
 - if authorized? :history
   #block-tables.block
     .content
