--- a/app/assets/stylesheets/rails_admin/base/theming.css.scss
+++ b/app/assets/stylesheets/rails_admin/base/theming.css.scss
@@ -62,7 +62,7 @@ table.zebra-striped {
   }
   
   td.links {
-    max-width:auto;
+    max-width: none;
     .inline {
       margin:0px;
       li {
