--- a/app/views/rails_admin/main/_models_links.html.haml
+++ b/app/views/rails_admin/main/_models_links.html.haml
@@ -13,13 +13,13 @@
 - if params[:action] == 'index'
   - if (can_delete || can_export)
     %li.dropdown{:style => 'float:right', :'data-dropdown' => "dropdown"}
-      %a.dropdown-toggle= t('admin.index.selected') + "..."
+      %a.dropdown-toggle{:href => '#'}= t('admin.index.selected') + "..."
       %ul.dropdown-menu
         %li= link_to_function t("admin.index.export_selected"), "jQuery('#bulk_action').val('export'); jQuery('#bulk_form').submit()" if can_export
         %li= link_to_function t("admin.index.delete_selected"), "jQuery('#bulk_action').val('delete'); jQuery('#bulk_form').submit()" if can_delete
   - if @filterable_fields.present?
     %li.dropdown{:style => 'float:right', :'data-dropdown' => "dropdown"}
-      %a.dropdown-toggle= t('admin.index.add_filter') + "..."
+      %a.dropdown-toggle{:href => '#'}= t('admin.index.add_filter') + "..."
       %ul.dropdown-menu#filters
         - @filterable_fields.each do |field|
           - field_options = case field.type
