touch devices [ci skip]

--- a/app/views/rails_admin/main/_models_links.html.haml
+++ b/app/views/rails_admin/main/_models_links.html.haml
@@ -28,4 +28,4 @@
           - else
             - ''
           %li
-            %a{"data-field-label" => field.label, "data-field-name" => field.name, "data-field-options" => field_options, "data-field-type" => field.type, "data-field-value" => ""}= field.label
+            %a{:href => '#', "data-field-label" => field.label, "data-field-name" => field.name, "data-field-options" => field_options, "data-field-type" => field.type, "data-field-value" => ""}= field.label
