cleaned filtering select, filtering multi-select and remote form remote form is now field centric (this was button before), which makes sense for RA, and cleans up its design added 'edit selection' for filtering-select (already possible for multiselect) added placeholder for filtering select fixed bug where filtering select weren't correctly emptied removed unnecessary styling for multiselect, added placeholder

--- a/app/assets/stylesheets/rails_admin/base/theming.css.scss
+++ b/app/assets/stylesheets/rails_admin/base/theming.css.scss
@@ -49,7 +49,9 @@ input, textarea {
   }
 }
 
-
+.help-block {
+  clear:left;
+}
 
 /* Table cells behaviour TODO: homogeinize classes a bit */
 table.zebra-striped {
