--- a/app/views/layouts/rails_admin/application.html.haml
+++ b/app/views/layouts/rails_admin/application.html.haml
@@ -38,4 +38,4 @@
         %span.row
         = yield
         %footer
-          %p &copy; RailsAdmin 2011
+          %p &copy; #{t('admin.footer.copyright')}
