--- a/app/views/rails_admin/main/_form_filtering_select.html.haml
+++ b/app/views/rails_admin/main/_form_filtering_select.html.haml
@@ -2,11 +2,8 @@
   config = field.associated_model_config
   related_id = params[:associations] && params[:associations][field.name.to_s]
 
-
-  xhr = field.associated_collection_count > 100
-
   if @object.new_record? && related_id.present? && related_id != 'new'
-    selected = field.associated_model_config.abstract_model.get(related_id)
+    selected = config.abstract_model.get(related_id)
     selected_id = selected.id
     selected_name = selected.send(config.object_label_method)
   else
@@ -14,11 +11,9 @@
     selected_name = field.formatted_value
   end
 
-  if xhr
-    collection = [[selected_name, selected_id]]
-  else
-    collection = field.associated_collection
-  end
+  collection = [[selected_name, selected_id]]
+  
+  current_action = params[:action].in?(['create', 'new']) ? 'create' : 'update'
   
   edit_url = authorized?(:edit, config.abstract_model) ? edit_path(:model_name => config.abstract_model.to_param, :id => '__ID__') : ''
 
@@ -33,17 +28,17 @@
   = link_to t('admin.actions.update').capitalize + ' ' + config.abstract_model.pretty_name.downcase, '#', :data => { :link => edit_url }, :class => "btn update #{field.value.nil? && 'disabled'}", :style => 'float:left; margin-left:10px'
 
 = javascript_tag do
-  jQuery(function($) {
-  $("##{field.dom_id}").filteringSelect({
-  - if xhr
-    createQuery: function(query) {
-    return { query: query }
-    },
-    source: "#{index_path(config.abstract_model.to_param, :compact => true).html_safe}"
-  });
-  if($("#modal").length) { // hide link if we already are inside a dialog (endless issues on nested dialogs with JS)
-  $("##{field.dom_id}_field .btn").hide();
-  } else {
-  $("##{field.dom_id}_field").remoteForm();
-  }
-  });
+  :plain
+    jQuery(function($) {
+      $("##{field.dom_id}").filteringSelect({
+        createQuery: function(query) {
+          return { query: query }
+        },
+        source: "#{index_path(@abstract_model.to_param, :compact => true, :associated_collection => field.name, :current_action => current_action).html_safe}"
+      });
+      if($("#modal").length) { // hide link if we already are inside a dialog (endless issues on nested dialogs with JS)
+        $("##{field.dom_id}_field .btn").hide();
+      } else {
+        $("##{field.dom_id}_field").remoteForm();
+      }
+    });
