fixed the color-picker removed it from default assets

--- a/app/assets/stylesheets/rails_admin/imports.css.scss.erb
+++ b/app/assets/stylesheets/rails_admin/imports.css.scss.erb
@@ -4,8 +4,8 @@
 
 /*
 TODO :
-  - optionize the theme variable nicely
-  - add plugin hooks: plugins.each{|p| @import rails_admin/plugins/#{p}/*[variables|mixins|theming]}
+  - optionize the theme variable nicely, beware of 
+  - add plugin hooks: plugins.each{|p| @import rails_admin/plugins/p/*[variables|mixins|theming]}
   - wiki pages for theming help
   - update readme for users
   - ask @sferik to RT a call for themers
@@ -34,7 +34,6 @@ TODO :
 @import "rails_admin/aristo/jquery-ui-1.8.7.custom";
 @import "rails_admin/jquery.ui.timepicker";
 @import "rails_admin/ra.calendar-additions";
-@import "rails_admin/jquery.colorpicker";
 @import "rails_admin/ra.filtering-multiselect";
 @import "rails_admin/ra.timeline";
 
