--- a/app/views/rails_admin/main/_form_filtering_select.html.haml
+++ b/app/views/rails_admin/main/_form_filtering_select.html.haml
@@ -34,7 +34,7 @@
         createQuery: function(query) {
           return { query: query }
         },
-        source: "#{index_path(@abstract_model.to_param, :object_id => @object.id, :compact => true, :associated_collection => field.name, :current_action => current_action).html_safe}"
+        source: "#{index_path(field.associated_model_config.abstract_model.to_param, :source_object_id => @object.id, :source_abstract_model => @abstract_model.to_param, :associated_collection => field.name, :current_action => current_action, :compact => true).html_safe}"
       });
       if($("#modal").length) { // hide link if we already are inside a dialog (endless issues on nested dialogs with JS)
         $("##{field.dom_id}_field .btn").hide();
